# CopyCat

./: CMakeLists.txt  README.md
src/: ballmanager.h  camera.h  glad.c  main.cpp  model.h  place.h  player.h  shader.h  texture.h  world.h
