
#ok this is the overall dependency architecture
# main only depends on the world
# world will depend on everything else

# I need libraries, but local library does not solve cross-OS dependency issue
#       --> solution: dumb approach, pack uo everything and throw into include
#       --> opengl dependency soled using glad


cmake_minimum_required(VERSION 3.28)
project(CopyCat)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_PREFIX_PATH "/home/ren/projects/Shoot-Game/library/include")
find_package(glfw3 REQUIRED)
find_package(assimp REQUIRED)

# ok this part may not even be necessary in the end
include_directories(library/include)
include_directories(library/include/assimp)
include_directories(library/include/assimp/Compiler)
include_directories(library/include/assimp/port)
include_directories(library/include/assimp/port/AndroidJNI)
include_directories(library/include/glad)
include_directories(library/include/GLFW)
include_directories(library/include/glm)
include_directories(library/include/glm/detail)
include_directories(library/include/glm/ext)
include_directories(library/include/glm/gtc)
include_directories(library/include/glm/gtx)
include_directories(library/include/glm/simd)
include_directories(library/include/KHR)
include_directories(library/include/stb_image)
include_directories(src)

add_executable(CopyCat
        library/include/assimp/Compiler/poppack1.h
        library/include/assimp/Compiler/pstdint.h
        library/include/assimp/Compiler/pushpack1.h
        library/include/assimp/port/AndroidJNI/AndroidJNIIOSystem.h
        library/include/assimp/port/AndroidJNI/BundledAssetIOSystem.h
        library/include/assimp/aabb.h
        library/include/assimp/ai_assert.h
        library/include/assimp/anim.h
        library/include/assimp/Base64.hpp
        library/include/assimp/BaseImporter.h
        library/include/assimp/Bitmap.h
        library/include/assimp/BlobIOSystem.h
        library/include/assimp/ByteSwapper.h
        library/include/assimp/camera.h
        library/include/assimp/cexport.h
        library/include/assimp/cfileio.h
        library/include/assimp/cimport.h
        library/include/assimp/ColladaMetaData.h
        library/include/assimp/color4.h
        library/include/assimp/color4.inl
        library/include/assimp/commonMetaData.h
        library/include/assimp/config.h
        library/include/assimp/CreateAnimMesh.h
        library/include/assimp/DefaultIOStream.h
        library/include/assimp/DefaultIOSystem.h
        library/include/assimp/DefaultLogger.hpp
        library/include/assimp/defs.h
        library/include/assimp/Exceptional.h
        library/include/assimp/Exporter.hpp
        library/include/assimp/fast_atof.h
        library/include/assimp/GenericProperty.h
        library/include/assimp/GltfMaterial.h
        library/include/assimp/Hash.h
        library/include/assimp/Importer.hpp
        library/include/assimp/importerdesc.h
        library/include/assimp/IOStream.hpp
        library/include/assimp/IOStreamBuffer.h
        library/include/assimp/IOSystem.hpp
        library/include/assimp/light.h
        library/include/assimp/LineSplitter.h
        library/include/assimp/LogAux.h
        library/include/assimp/Logger.hpp
        library/include/assimp/LogStream.hpp
        library/include/assimp/material.h
        library/include/assimp/material.inl
        library/include/assimp/MathFunctions.h
        library/include/assimp/matrix3x3.h
        library/include/assimp/matrix3x3.inl
        library/include/assimp/matrix4x4.h
        library/include/assimp/matrix4x4.inl
        library/include/assimp/MemoryIOWrapper.h
        library/include/assimp/mesh.h
        library/include/assimp/metadata.h
        library/include/assimp/NullLogger.hpp
        library/include/assimp/ObjMaterial.h
        library/include/assimp/ParsingUtils.h
        library/include/assimp/pbrmaterial.h
        library/include/assimp/postprocess.h
        library/include/assimp/Profiler.h
        library/include/assimp/ProgressHandler.hpp
        library/include/assimp/qnan.h
        library/include/assimp/quaternion.h
        library/include/assimp/quaternion.inl
        library/include/assimp/RemoveComments.h
        library/include/assimp/scene.h
        library/include/assimp/SceneCombiner.h
        library/include/assimp/SGSpatialSort.h
        library/include/assimp/SkeletonMeshBuilder.h
        library/include/assimp/SmallVector.h
        library/include/assimp/SmoothingGroups.h
        library/include/assimp/SmoothingGroups.inl
        library/include/assimp/SpatialSort.h
        library/include/assimp/StandardShapes.h
        library/include/assimp/StreamReader.h
        library/include/assimp/StreamWriter.h
        library/include/assimp/StringComparison.h
        library/include/assimp/StringUtils.h
        library/include/assimp/Subdivision.h
        library/include/assimp/texture.h
        library/include/assimp/TinyFormatter.h
        library/include/assimp/types.h
        library/include/assimp/vector2.h
        library/include/assimp/vector2.inl
        library/include/assimp/vector3.h
        library/include/assimp/vector3.inl
        library/include/assimp/version.h
        library/include/assimp/Vertex.h
        library/include/assimp/XmlParser.h
        library/include/assimp/XMLTools.h
        library/include/assimp/ZipArchiveIOSystem.h
        library/include/glad/glad.h
        library/include/GLFW/glfw3.h
        library/include/GLFW/glfw3native.h
        library/include/glm/detail/_features.hpp
        library/include/glm/detail/_fixes.hpp
        library/include/glm/detail/_noise.hpp
        library/include/glm/detail/_swizzle.hpp
        library/include/glm/detail/_swizzle_func.hpp
        library/include/glm/detail/_vectorize.hpp
        library/include/glm/detail/compute_common.hpp
        library/include/glm/detail/compute_vector_relational.hpp
        library/include/glm/detail/func_common.inl
        library/include/glm/detail/func_common_simd.inl
        library/include/glm/detail/func_exponential.inl
        library/include/glm/detail/func_exponential_simd.inl
        library/include/glm/detail/func_geometric.inl
        library/include/glm/detail/func_geometric_simd.inl
        library/include/glm/detail/func_integer.inl
        library/include/glm/detail/func_integer_simd.inl
        library/include/glm/detail/func_matrix.inl
        library/include/glm/detail/func_matrix_simd.inl
        library/include/glm/detail/func_packing.inl
        library/include/glm/detail/func_packing_simd.inl
        library/include/glm/detail/func_trigonometric.inl
        library/include/glm/detail/func_trigonometric_simd.inl
        library/include/glm/detail/func_vector_relational.inl
        library/include/glm/detail/func_vector_relational_simd.inl
        library/include/glm/detail/glm.cpp
        library/include/glm/detail/qualifier.hpp
        library/include/glm/detail/setup.hpp
        library/include/glm/detail/type_float.hpp
        library/include/glm/detail/type_half.hpp
        library/include/glm/detail/type_half.inl
        library/include/glm/detail/type_mat2x2.hpp
        library/include/glm/detail/type_mat2x2.inl
        library/include/glm/detail/type_mat2x3.hpp
        library/include/glm/detail/type_mat2x3.inl
        library/include/glm/detail/type_mat2x4.hpp
        library/include/glm/detail/type_mat2x4.inl
        library/include/glm/detail/type_mat3x2.hpp
        library/include/glm/detail/type_mat3x2.inl
        library/include/glm/detail/type_mat3x3.hpp
        library/include/glm/detail/type_mat3x3.inl
        library/include/glm/detail/type_mat3x4.hpp
        library/include/glm/detail/type_mat3x4.inl
        library/include/glm/detail/type_mat4x2.hpp
        library/include/glm/detail/type_mat4x2.inl
        library/include/glm/detail/type_mat4x3.hpp
        library/include/glm/detail/type_mat4x3.inl
        library/include/glm/detail/type_mat4x4.hpp
        library/include/glm/detail/type_mat4x4.inl
        library/include/glm/detail/type_mat4x4_simd.inl
        library/include/glm/detail/type_quat.hpp
        library/include/glm/detail/type_quat.inl
        library/include/glm/detail/type_quat_simd.inl
        library/include/glm/detail/type_vec1.hpp
        library/include/glm/detail/type_vec1.inl
        library/include/glm/detail/type_vec2.hpp
        library/include/glm/detail/type_vec2.inl
        library/include/glm/detail/type_vec3.hpp
        library/include/glm/detail/type_vec3.inl
        library/include/glm/detail/type_vec4.hpp
        library/include/glm/detail/type_vec4.inl
        library/include/glm/detail/type_vec4_simd.inl
        library/include/glm/ext/matrix_clip_space.hpp
        library/include/glm/ext/matrix_clip_space.inl
        library/include/glm/ext/matrix_common.hpp
        library/include/glm/ext/matrix_common.inl
        library/include/glm/ext/matrix_double2x2.hpp
        library/include/glm/ext/matrix_double2x2_precision.hpp
        library/include/glm/ext/matrix_double2x3.hpp
        library/include/glm/ext/matrix_double2x3_precision.hpp
        library/include/glm/ext/matrix_double2x4.hpp
        library/include/glm/ext/matrix_double2x4_precision.hpp
        library/include/glm/ext/matrix_double3x2.hpp
        library/include/glm/ext/matrix_double3x2_precision.hpp
        library/include/glm/ext/matrix_double3x3.hpp
        library/include/glm/ext/matrix_double3x3_precision.hpp
        library/include/glm/ext/matrix_double3x4.hpp
        library/include/glm/ext/matrix_double3x4_precision.hpp
        library/include/glm/ext/matrix_double4x2.hpp
        library/include/glm/ext/matrix_double4x2_precision.hpp
        library/include/glm/ext/matrix_double4x3.hpp
        library/include/glm/ext/matrix_double4x3_precision.hpp
        library/include/glm/ext/matrix_double4x4.hpp
        library/include/glm/ext/matrix_double4x4_precision.hpp
        library/include/glm/ext/matrix_float2x2.hpp
        library/include/glm/ext/matrix_float2x2_precision.hpp
        library/include/glm/ext/matrix_float2x3.hpp
        library/include/glm/ext/matrix_float2x3_precision.hpp
        library/include/glm/ext/matrix_float2x4.hpp
        library/include/glm/ext/matrix_float2x4_precision.hpp
        library/include/glm/ext/matrix_float3x2.hpp
        library/include/glm/ext/matrix_float3x2_precision.hpp
        library/include/glm/ext/matrix_float3x3.hpp
        library/include/glm/ext/matrix_float3x3_precision.hpp
        library/include/glm/ext/matrix_float3x4.hpp
        library/include/glm/ext/matrix_float3x4_precision.hpp
        library/include/glm/ext/matrix_float4x2.hpp
        library/include/glm/ext/matrix_float4x2_precision.hpp
        library/include/glm/ext/matrix_float4x3.hpp
        library/include/glm/ext/matrix_float4x3_precision.hpp
        library/include/glm/ext/matrix_float4x4.hpp
        library/include/glm/ext/matrix_float4x4_precision.hpp
        library/include/glm/ext/matrix_int2x2.hpp
        library/include/glm/ext/matrix_int2x2_sized.hpp
        library/include/glm/ext/matrix_int2x3.hpp
        library/include/glm/ext/matrix_int2x3_sized.hpp
        library/include/glm/ext/matrix_int2x4.hpp
        library/include/glm/ext/matrix_int2x4_sized.hpp
        library/include/glm/ext/matrix_int3x2.hpp
        library/include/glm/ext/matrix_int3x2_sized.hpp
        library/include/glm/ext/matrix_int3x3.hpp
        library/include/glm/ext/matrix_int3x3_sized.hpp
        library/include/glm/ext/matrix_int3x4.hpp
        library/include/glm/ext/matrix_int3x4_sized.hpp
        library/include/glm/ext/matrix_int4x2.hpp
        library/include/glm/ext/matrix_int4x2_sized.hpp
        library/include/glm/ext/matrix_int4x3.hpp
        library/include/glm/ext/matrix_int4x3_sized.hpp
        library/include/glm/ext/matrix_int4x4.hpp
        library/include/glm/ext/matrix_int4x4_sized.hpp
        library/include/glm/ext/matrix_projection.hpp
        library/include/glm/ext/matrix_projection.inl
        library/include/glm/ext/matrix_relational.hpp
        library/include/glm/ext/matrix_relational.inl
        library/include/glm/ext/matrix_transform.hpp
        library/include/glm/ext/matrix_transform.inl
        library/include/glm/ext/matrix_uint2x2.hpp
        library/include/glm/ext/matrix_uint2x2_sized.hpp
        library/include/glm/ext/matrix_uint2x3.hpp
        library/include/glm/ext/matrix_uint2x3_sized.hpp
        library/include/glm/ext/matrix_uint2x4.hpp
        library/include/glm/ext/matrix_uint2x4_sized.hpp
        library/include/glm/ext/matrix_uint3x2.hpp
        library/include/glm/ext/matrix_uint3x2_sized.hpp
        library/include/glm/ext/matrix_uint3x3.hpp
        library/include/glm/ext/matrix_uint3x3_sized.hpp
        library/include/glm/ext/matrix_uint3x4.hpp
        library/include/glm/ext/matrix_uint3x4_sized.hpp
        library/include/glm/ext/matrix_uint4x2.hpp
        library/include/glm/ext/matrix_uint4x2_sized.hpp
        library/include/glm/ext/matrix_uint4x3.hpp
        library/include/glm/ext/matrix_uint4x3_sized.hpp
        library/include/glm/ext/matrix_uint4x4.hpp
        library/include/glm/ext/matrix_uint4x4_sized.hpp
        library/include/glm/ext/quaternion_common.hpp
        library/include/glm/ext/quaternion_common.inl
        library/include/glm/ext/quaternion_common_simd.inl
        library/include/glm/ext/quaternion_double.hpp
        library/include/glm/ext/quaternion_double_precision.hpp
        library/include/glm/ext/quaternion_exponential.hpp
        library/include/glm/ext/quaternion_exponential.inl
        library/include/glm/ext/quaternion_float.hpp
        library/include/glm/ext/quaternion_float_precision.hpp
        library/include/glm/ext/quaternion_geometric.hpp
        library/include/glm/ext/quaternion_geometric.inl
        library/include/glm/ext/quaternion_relational.hpp
        library/include/glm/ext/quaternion_relational.inl
        library/include/glm/ext/quaternion_transform.hpp
        library/include/glm/ext/quaternion_transform.inl
        library/include/glm/ext/quaternion_trigonometric.hpp
        library/include/glm/ext/quaternion_trigonometric.inl
        library/include/glm/ext/scalar_common.hpp
        library/include/glm/ext/scalar_common.inl
        library/include/glm/ext/scalar_constants.hpp
        library/include/glm/ext/scalar_constants.inl
        library/include/glm/ext/scalar_int_sized.hpp
        library/include/glm/ext/scalar_integer.hpp
        library/include/glm/ext/scalar_integer.inl
        library/include/glm/ext/scalar_packing.hpp
        library/include/glm/ext/scalar_packing.inl
        library/include/glm/ext/scalar_relational.hpp
        library/include/glm/ext/scalar_relational.inl
        library/include/glm/ext/scalar_uint_sized.hpp
        library/include/glm/ext/scalar_ulp.hpp
        library/include/glm/ext/scalar_ulp.inl
        library/include/glm/ext/vector_bool1.hpp
        library/include/glm/ext/vector_bool1_precision.hpp
        library/include/glm/ext/vector_bool2.hpp
        library/include/glm/ext/vector_bool2_precision.hpp
        library/include/glm/ext/vector_bool3.hpp
        library/include/glm/ext/vector_bool3_precision.hpp
        library/include/glm/ext/vector_bool4.hpp
        library/include/glm/ext/vector_bool4_precision.hpp
        library/include/glm/ext/vector_common.hpp
        library/include/glm/ext/vector_common.inl
        library/include/glm/ext/vector_double1.hpp
        library/include/glm/ext/vector_double1_precision.hpp
        library/include/glm/ext/vector_double2.hpp
        library/include/glm/ext/vector_double2_precision.hpp
        library/include/glm/ext/vector_double3.hpp
        library/include/glm/ext/vector_double3_precision.hpp
        library/include/glm/ext/vector_double4.hpp
        library/include/glm/ext/vector_double4_precision.hpp
        library/include/glm/ext/vector_float1.hpp
        library/include/glm/ext/vector_float1_precision.hpp
        library/include/glm/ext/vector_float2.hpp
        library/include/glm/ext/vector_float2_precision.hpp
        library/include/glm/ext/vector_float3.hpp
        library/include/glm/ext/vector_float3_precision.hpp
        library/include/glm/ext/vector_float4.hpp
        library/include/glm/ext/vector_float4_precision.hpp
        library/include/glm/ext/vector_int1.hpp
        library/include/glm/ext/vector_int1_sized.hpp
        library/include/glm/ext/vector_int2.hpp
        library/include/glm/ext/vector_int2_sized.hpp
        library/include/glm/ext/vector_int3.hpp
        library/include/glm/ext/vector_int3_sized.hpp
        library/include/glm/ext/vector_int4.hpp
        library/include/glm/ext/vector_int4_sized.hpp
        library/include/glm/ext/vector_integer.hpp
        library/include/glm/ext/vector_integer.inl
        library/include/glm/ext/vector_packing.hpp
        library/include/glm/ext/vector_packing.inl
        library/include/glm/ext/vector_relational.hpp
        library/include/glm/ext/vector_relational.inl
        library/include/glm/ext/vector_uint1.hpp
        library/include/glm/ext/vector_uint1_sized.hpp
        library/include/glm/ext/vector_uint2.hpp
        library/include/glm/ext/vector_uint2_sized.hpp
        library/include/glm/ext/vector_uint3.hpp
        library/include/glm/ext/vector_uint3_sized.hpp
        library/include/glm/ext/vector_uint4.hpp
        library/include/glm/ext/vector_uint4_sized.hpp
        library/include/glm/ext/vector_ulp.hpp
        library/include/glm/ext/vector_ulp.inl
        library/include/glm/gtc/bitfield.hpp
        library/include/glm/gtc/bitfield.inl
        library/include/glm/gtc/color_space.hpp
        library/include/glm/gtc/color_space.inl
        library/include/glm/gtc/constants.hpp
        library/include/glm/gtc/constants.inl
        library/include/glm/gtc/epsilon.hpp
        library/include/glm/gtc/epsilon.inl
        library/include/glm/gtc/integer.hpp
        library/include/glm/gtc/integer.inl
        library/include/glm/gtc/matrix_access.hpp
        library/include/glm/gtc/matrix_access.inl
        library/include/glm/gtc/matrix_integer.hpp
        library/include/glm/gtc/matrix_inverse.hpp
        library/include/glm/gtc/matrix_inverse.inl
        library/include/glm/gtc/matrix_transform.hpp
        library/include/glm/gtc/matrix_transform.inl
        library/include/glm/gtc/noise.hpp
        library/include/glm/gtc/noise.inl
        library/include/glm/gtc/packing.hpp
        library/include/glm/gtc/packing.inl
        library/include/glm/gtc/quaternion.hpp
        library/include/glm/gtc/quaternion.inl
        library/include/glm/gtc/quaternion_simd.inl
        library/include/glm/gtc/random.hpp
        library/include/glm/gtc/random.inl
        library/include/glm/gtc/reciprocal.hpp
        library/include/glm/gtc/reciprocal.inl
        library/include/glm/gtc/round.hpp
        library/include/glm/gtc/round.inl
        library/include/glm/gtc/type_aligned.hpp
        library/include/glm/gtc/type_precision.hpp
        library/include/glm/gtc/type_precision.inl
        library/include/glm/gtc/type_ptr.hpp
        library/include/glm/gtc/type_ptr.inl
        library/include/glm/gtc/ulp.hpp
        library/include/glm/gtc/ulp.inl
        library/include/glm/gtc/vec1.hpp
        library/include/glm/gtx/associated_min_max.hpp
        library/include/glm/gtx/associated_min_max.inl
        library/include/glm/gtx/bit.hpp
        library/include/glm/gtx/bit.inl
        library/include/glm/gtx/closest_point.hpp
        library/include/glm/gtx/closest_point.inl
        library/include/glm/gtx/color_encoding.hpp
        library/include/glm/gtx/color_encoding.inl
        library/include/glm/gtx/color_space.hpp
        library/include/glm/gtx/color_space.inl
        library/include/glm/gtx/color_space_YCoCg.hpp
        library/include/glm/gtx/color_space_YCoCg.inl
        library/include/glm/gtx/common.hpp
        library/include/glm/gtx/common.inl
        library/include/glm/gtx/compatibility.hpp
        library/include/glm/gtx/compatibility.inl
        library/include/glm/gtx/component_wise.hpp
        library/include/glm/gtx/component_wise.inl
        library/include/glm/gtx/dual_quaternion.hpp
        library/include/glm/gtx/dual_quaternion.inl
        library/include/glm/gtx/easing.hpp
        library/include/glm/gtx/easing.inl
        library/include/glm/gtx/euler_angles.hpp
        library/include/glm/gtx/euler_angles.inl
        library/include/glm/gtx/extend.hpp
        library/include/glm/gtx/extend.inl
        library/include/glm/gtx/extended_min_max.hpp
        library/include/glm/gtx/extended_min_max.inl
        library/include/glm/gtx/exterior_product.hpp
        library/include/glm/gtx/exterior_product.inl
        library/include/glm/gtx/fast_exponential.hpp
        library/include/glm/gtx/fast_exponential.inl
        library/include/glm/gtx/fast_square_root.hpp
        library/include/glm/gtx/fast_square_root.inl
        library/include/glm/gtx/fast_trigonometry.hpp
        library/include/glm/gtx/fast_trigonometry.inl
        library/include/glm/gtx/float_notmalize.inl
        library/include/glm/gtx/functions.hpp
        library/include/glm/gtx/functions.inl
        library/include/glm/gtx/gradient_paint.hpp
        library/include/glm/gtx/gradient_paint.inl
        library/include/glm/gtx/handed_coordinate_space.hpp
        library/include/glm/gtx/handed_coordinate_space.inl
        library/include/glm/gtx/hash.hpp
        library/include/glm/gtx/hash.inl
        library/include/glm/gtx/integer.hpp
        library/include/glm/gtx/integer.inl
        library/include/glm/gtx/intersect.hpp
        library/include/glm/gtx/intersect.inl
        library/include/glm/gtx/io.hpp
        library/include/glm/gtx/io.inl
        library/include/glm/gtx/log_base.hpp
        library/include/glm/gtx/log_base.inl
        library/include/glm/gtx/matrix_cross_product.hpp
        library/include/glm/gtx/matrix_cross_product.inl
        library/include/glm/gtx/matrix_decompose.hpp
        library/include/glm/gtx/matrix_decompose.inl
        library/include/glm/gtx/matrix_factorisation.hpp
        library/include/glm/gtx/matrix_factorisation.inl
        library/include/glm/gtx/matrix_interpolation.hpp
        library/include/glm/gtx/matrix_interpolation.inl
        library/include/glm/gtx/matrix_major_storage.hpp
        library/include/glm/gtx/matrix_major_storage.inl
        library/include/glm/gtx/matrix_operation.hpp
        library/include/glm/gtx/matrix_operation.inl
        library/include/glm/gtx/matrix_query.hpp
        library/include/glm/gtx/matrix_query.inl
        library/include/glm/gtx/matrix_transform_2d.hpp
        library/include/glm/gtx/matrix_transform_2d.inl
        library/include/glm/gtx/mixed_product.hpp
        library/include/glm/gtx/mixed_product.inl
        library/include/glm/gtx/norm.hpp
        library/include/glm/gtx/norm.inl
        library/include/glm/gtx/normal.hpp
        library/include/glm/gtx/normal.inl
        library/include/glm/gtx/normalize_dot.hpp
        library/include/glm/gtx/normalize_dot.inl
        library/include/glm/gtx/number_precision.hpp
        library/include/glm/gtx/number_precision.inl
        library/include/glm/gtx/optimum_pow.hpp
        library/include/glm/gtx/optimum_pow.inl
        library/include/glm/gtx/orthonormalize.hpp
        library/include/glm/gtx/orthonormalize.inl
        library/include/glm/gtx/perpendicular.hpp
        library/include/glm/gtx/perpendicular.inl
        library/include/glm/gtx/polar_coordinates.hpp
        library/include/glm/gtx/polar_coordinates.inl
        library/include/glm/gtx/projection.hpp
        library/include/glm/gtx/projection.inl
        library/include/glm/gtx/quaternion.hpp
        library/include/glm/gtx/quaternion.inl
        library/include/glm/gtx/range.hpp
        library/include/glm/gtx/raw_data.hpp
        library/include/glm/gtx/raw_data.inl
        library/include/glm/gtx/rotate_normalized_axis.hpp
        library/include/glm/gtx/rotate_normalized_axis.inl
        library/include/glm/gtx/rotate_vector.hpp
        library/include/glm/gtx/rotate_vector.inl
        library/include/glm/gtx/scalar_multiplication.hpp
        library/include/glm/gtx/scalar_relational.hpp
        library/include/glm/gtx/scalar_relational.inl
        library/include/glm/gtx/spline.hpp
        library/include/glm/gtx/spline.inl
        library/include/glm/gtx/std_based_type.hpp
        library/include/glm/gtx/std_based_type.inl
        library/include/glm/gtx/string_cast.hpp
        library/include/glm/gtx/string_cast.inl
        library/include/glm/gtx/texture.hpp
        library/include/glm/gtx/texture.inl
        library/include/glm/gtx/transform.hpp
        library/include/glm/gtx/transform.inl
        library/include/glm/gtx/transform2.hpp
        library/include/glm/gtx/transform2.inl
        library/include/glm/gtx/type_aligned.hpp
        library/include/glm/gtx/type_aligned.inl
        library/include/glm/gtx/type_trait.hpp
        library/include/glm/gtx/type_trait.inl
        library/include/glm/gtx/vec_swizzle.hpp
        library/include/glm/gtx/vector_angle.hpp
        library/include/glm/gtx/vector_angle.inl
        library/include/glm/gtx/vector_query.hpp
        library/include/glm/gtx/vector_query.inl
        library/include/glm/gtx/wrap.hpp
        library/include/glm/gtx/wrap.inl
        library/include/glm/simd/common.h
        library/include/glm/simd/exponential.h
        library/include/glm/simd/geometric.h
        library/include/glm/simd/integer.h
        library/include/glm/simd/matrix.h
        library/include/glm/simd/neon.h
        library/include/glm/simd/packing.h
        library/include/glm/simd/platform.h
        library/include/glm/simd/trigonometric.h
        library/include/glm/simd/vector_relational.h
        library/include/glm/common.hpp
        library/include/glm/exponential.hpp
        library/include/glm/ext.hpp
        library/include/glm/fwd.hpp
        library/include/glm/geometric.hpp
        library/include/glm/glm.hpp
        library/include/glm/integer.hpp
        library/include/glm/mat2x2.hpp
        library/include/glm/mat2x3.hpp
        library/include/glm/mat2x4.hpp
        library/include/glm/mat3x2.hpp
        library/include/glm/mat3x3.hpp
        library/include/glm/mat3x4.hpp
        library/include/glm/mat4x2.hpp
        library/include/glm/mat4x3.hpp
        library/include/glm/mat4x4.hpp
        library/include/glm/matrix.hpp
        library/include/glm/packing.hpp
        library/include/glm/trigonometric.hpp
        library/include/glm/vec2.hpp
        library/include/glm/vec3.hpp
        library/include/glm/vec4.hpp
        library/include/glm/vector_relational.hpp
        library/include/KHR/khrplatform.h
        library/include/stb_image/stb_image.cpp
        library/include/stb_image/stb_image.h
        src/ballmanager.h
        src/camera.h
        src/glad.c
        src/main.cpp
        src/model.h
        src/place.h
        src/player.h
        src/shader.h
        src/texture.h
        src/world.h)

target_link_libraries(CopyCat PRIVATE glfw)
target_link_libraries(CopyCat PRIVATE assimp)
